cluster/manifests/exactly-one-pod-hook/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exactly-one-pod-hook
  labels:
    name: exactly-one-pod-hook
    pod-security.kubernetes.io/enforce: restricted
