cluster/manifests/exactly-one-pod-hook/overlays/dev/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: exactly-one-pod-hook-redis
spec:
  replicas: 3
  serviceName: exactly-one-pod-hook-redis
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  podManagementPolicy: Parallel
  selector:
    matchLabels: &labels
      app.kubernetes.io/name: exactly-one-pod-hook
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          matchLabelKeys:
            - controller-revision-hash
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: exactly-one-pod-hook
              app.kubernetes.io/component: redis
        - maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: topology.kubernetes.io/zone
          #minDomains: 3
          #whenUnsatisfiable: DoNotSchedule
          whenUnsatisfiable: ScheduleAnyway
          matchLabelKeys:
            - controller-revision-hash
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: exactly-one-pod-hook
              app.kubernetes.io/component: redis
      containers:
        - name: redis
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: redis
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          resources:
            requests:
              memory: 8Mi
          volumeMounts:
            - name: data
              mountPath: /data
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: exactly-one-pod-hook-redis
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: exactly-one-pod-hook
    app.kubernetes.io/component: redis
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exactly-one-pod-hook-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: exactly-one-pod-hook
      app.kubernetes.io/component: redis
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: redis
spec:
  hosts:
    - exactly-one-pod-hook-redis-0.exactly-one-pod-hook-redis.exactly-one-pod-hook.svc.cluster.local
    - exactly-one-pod-hook-redis-1.exactly-one-pod-hook-redis.exactly-one-pod-hook.svc.cluster.local
    - exactly-one-pod-hook-redis-2.exactly-one-pod-hook-redis.exactly-one-pod-hook.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - name: tcp
      number: 6379
      protocol: TCP
  resolution: NONE
